# fastflow

./: .gitignore  .pyre_configuration  Cargo.toml  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: check_py.yml  check_rs.yml  cov.yml  doc.yml  mypy.yml  pyright.yml  test_py.yml  test_rs.yml  wheel.yml  wheel_macos.yml  wheel_windows.yml
docs/source/: conf.py  fastflow.rst  index.rst  ref.bib
examples/: flow.py  gflow.py  pflow.py  solver.py
python/fastflow/: __init__.py  _common.py  common.py  flow.py  gflow.py  pflow.py  solver.py
python/fastflow/_impl/: __init__.pyi  flow.pyi  gflow.pyi  pflow.pyi
scratchpad/: flow_ng.py  flow_ok.py  rawcall.py
src/: common.rs  flow.rs  gf2_linalg.rs  gflow.rs  internal.rs  lib.rs  pflow.rs  solver.rs  test_utils.rs  utils.rs  validate.rs
src/internal/: gf2_linalg.rs  test_utils.rs  utils.rs  validate.rs
tests/: assets.py  test_common.py  test_examples.py  test_flow.py  test_gflow.py  test_pflow.py  test_solver.py  utils.py
