[package]
name = "fastflow"
description = "Rust binding of generalized and pauli flow finding algorithms."
homepage = "https://github.com/TeamGraphix/fastflow"
repository = "https://github.com/TeamGraphix/fastflow"
# Must be consistent with pyproject.toml
version = "0.1.0"
authors = ["S.S <66886825+EarlMilktea@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mbqc", "quantum-computing", "quantum"]

[lib]
name = "fastflow"
crate-type = ["cdylib"]

[dependencies]
fixedbitset = "0.5"
hashbrown = "0.15"
itertools = "0.14"
pyo3 = { version = "0.24", features = ["abi3-py39", "hashbrown"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
rand = "0.9"
rstest = "0.25"
rstest_reuse = "0.7"
test-log = { version = "0.2", features = ["trace"] }
